Bug 344204 - Folder pane doesn't display folder tree structure when selecting Home or Root locations
Summary: Folder pane doesn't display folder tree structure when selecting Home or Root...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: folders (other bugs)
Version First Reported In: 4.60
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-15 20:13 UTC by JantarMantar
Modified: 2015-02-19 11:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 15.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description JantarMantar 2015-02-15 20:13:44 UTC
When clicking on Home or Root locations, the folder pane remains unchanged. Whereas in KDE 4 version, it displayed the directory tree structure. When dolphin is started from terminal, clicking on Home/Root locations shows "URL cannot be listed
/". There possibly is a new-line character before the "/".

Please see discussion at http://kaosx.us/phpBB3/viewtopic.php?f=18&t=872


Reproducible: Always

Steps to Reproduce:
1. Click on Home or Root location
2.
3.

Actual Results:  
 Observe that the folder pane remains unchanged

Expected Results:  
Folder pane should display directory tree structure of the selected location.

Folder pane seems to respond to Network and Calendar locations.

Platform:  KaOS 64 bit
KF5 Plasma Shell 5.2
KF5 Framework 5.7
Linux 3.18
Comment 1 Emmanuel Pescosta 2015-02-18 16:21:17 UTC
Thanks for the bug report, I can reproduce the problem and sorry for the late response!

Review-Request: https://git.reviewboard.kde.org/r/122631/
Comment 2 Emmanuel Pescosta 2015-02-19 11:11:27 UTC
Git commit 5a537cb20f676525dbb6ab1207151e2802c8915e by Emmanuel Pescosta.
Committed on 18/02/2015 at 16:12.
Pushed by emmanuelp into branch 'frameworks'.

QUrl porting bug: Added a missing QUrl::fromLocalFile in FoldersPanel::loadTree to make the FoldersPanel work again

REVIEW: 122631
FIXED-IN: 15.04

M  +1    -1    dolphin/src/panels/folders/folderspanel.cpp

http://commits.kde.org/kde-baseapps/5a537cb20f676525dbb6ab1207151e2802c8915e