QUrl porting bug: Added a missing QUrl::fromLocalFile in FoldersPanel::loadTree to make the FoldersPanel work again

REVIEW: 122631
BUG: 344204
FIXED-IN: 15.04